--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "async",
   "version": "0.0.1",
   "private": true,
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.24.1",
@@ -14,18 +25,6 @@
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-node-externals": "^1.5.4"
-  },
-  "dependencies": {
-    "axios": "^0.20.0",
-    "express": "^4.17.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "heroku-prebuild": "npm install --dev",
