--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "devDependencies": {},
   "dependencies": {
     "axios": "^0.20.0",
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "compression": "^1.7.4",
+    "compression-webpack-plugin": "^5.0.2",
+    "css-loader": "^0.26.1",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -14,15 +23,9 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "babel-cli": "^6.18.0",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
-    "babel-plugin-css-modules-transform": "^1.6.2",
     "webpack": "^1.13.3",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-node-externals": "^1.5.4"
   },
